--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,14 +1,48 @@
 .hero__photo {
   width: 10%;
   position: absolute;
-  right: 200px;
+  right: 250px;
   top: 55px;
-  width: 250px;
+  width: 300px;
   border-radius: 10px;
 }
 
 .hero__div {
   background-color: #495e57;
   position: relative;
-  height: 300px;
+  height: 390px;
+  margin-bottom: 180px;
+  margin-top: 90px;
+}
+
+.hero__div__title {
+  display: flex;
+  justify-content: center;
+}
+
+.hero__title {
+  width: 940px;
+  color: #f4ce14;
+  font-family: inter;
+  font-size: 48px;
+  margin-bottom: 0px;
+}
+
+.hero__subtitle {
+  width: 940px;
+  color: white;
+  font-family: karla;
+  font-size: 36px;
+  margin-top: 0px;
+}
+
+.hero__div__subtitle {
+  display: flex;
+  justify-content: center;
+}
+
+.hero__div__button {
+  display: flex;
+  margin-left: 18%;
+  margin-top: 10%;
 }
