--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,16 +1,20 @@
 .nav {
   display: flex;
   justify-content: space-around;
+  margin-top: 40px;
 }
 
 .nav__links {
   display: flex;
   align-items: center;
   list-style: none;
+  font-family: karla;
+  font-weight: bold;
 }
 
 .nav__logo__header {
-  width: 20%;
+  width: 15%;
+  /* margin-top: 90px; */
 }
 
 .nav__li__links {
