--- a/src/Testimonials.css
+++ b/src/Testimonials.css
@@ -14,4 +14,11 @@
   grid-row-gap: 8px;
   margin-top: 170px;
   padding: 150px;
+  background-color: #d9d9d9;
+  position: relative;
+}
+
+.testimoniais__title {
+  position: absolute;
+  margin-left: 44%;
 }
