--- a/src/Highlights.css
+++ b/src/Highlights.css
@@ -23,5 +23,13 @@
 
 .Highlights__div {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  width: 940px;
+  justify-content: space-between;
+}
+
+.Highlights {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
