--- a/src/About.css
+++ b/src/About.css
@@ -10,21 +10,21 @@
 
 .about__img__pasta {
   width: 305px;
-  height: 213px;
+  height: 221px;
   margin-top: 0.8%;
 }
 
 .about__imgs__div {
   display: flex;
   flex-direction: column;
-  position: relative;
-  align-items: flex-end;
-  margin-right: 13%;
+  gap: 1px;
 }
 
 .about__img__div {
-  position: absolute;
-  margin-left: 45%;
+  /* position: absolute;
+  margin-left: 45%; */
+  display: flex;
+  padding-left: 20px;
 }
 
 .about__paragraph {
@@ -33,20 +33,24 @@
 }
 
 .about__paragraph__description {
-  margin-top: 30%;
-  margin-left: 25%;
+  /* margin-top: 30%;
+  margin-left: 25%; */
   font-size: 24px;
   font-family: inter;
 }
 
 .about__div__titles {
-  width: 40%;
+  /* width: 40%;
   position: absolute;
-  margin-left: 10%;
+  margin-left: 10%; */
+  /* width: 50%; */
 }
 
 .about__div {
-  margin-top: 10%;
+  padding-top: 10%;
+  padding-left: 200px;
+  padding-right: 200px;
+  display: flex;
 }
 
 .about__h1__title {
