--- a/src/Testimonials.css
+++ b/src/Testimonials.css
@@ -1,3 +1,9 @@
+.testimonials {
+  margin-top: 170px;
+  padding: 50px 150px;
+  background-color: #d9d9d9;
+}
+
 .testimonials__div {
   /* background-color: #d9d9d9; */
 
@@ -12,14 +18,14 @@
   grid-template-columns: repeat(4, 270px);
   grid-column-gap: 50px;
   grid-row-gap: 8px;
-  margin-top: 170px;
-  padding: 150px;
-  background-color: #d9d9d9;
-  position: relative;
+
+  /* position: relative; */
   justify-content: center;
 }
 
 .testimoniais__title {
-  position: absolute;
-  margin-left: 44%;
+  /* position: absolute;
+  margin-left: 44%; */
+  text-align: center;
+  margin-bottom: 50px;
 }
